crates/strider/tests/snapshots/v2__x64__floats__f64_arith.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#88cc88", label=RAX, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#88cc88", label=RDX, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#88cc88", label=XMM0, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#88cc88", label=XMM1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nXMM1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "7" -> "5" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "8" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "9" -> "8" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "8" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "10" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "11" -> "10" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "11" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "12" -> "11" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="Div:f64", shape=box, fillcolor="#1a3020"];
  "13" -> "12" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "14" -> "12" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "14" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "15" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "15" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "16" -> "15" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "16" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "17" -> "16" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "16" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "19" -> "18" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "19" [label="const 0x3ff0000000000000:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "20" -> "17" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "20" [label="Truncate\nu128 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "20" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="init\nXMM0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "22" -> "13" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "22" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "23" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "24" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="Neg\nf64 → f64", shape=box, fillcolor="#1a3020"];
  "26" -> "25" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "26" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "27" -> "26" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "27" [label="Truncate\nu128 → u64", shape=box, fillcolor="#2d2d2d"];
  "6" -> "27" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "24" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "28" -> "24" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "28" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "29" -> "28" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "29" [label="Mul:f64", shape=box, fillcolor="#1a3020"];
  "30" -> "29" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "17" -> "29" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "30" [label="CastToFloat\nu64 → f64", shape=box, fillcolor="#302018"];
  "31" -> "30" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "31" [label="bitcast\nf64 → u64", shape=box, fillcolor="#302018"];
  "32" -> "31" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "32" [label="Add:f64", shape=box, fillcolor="#1a3020"];
  "17" -> "32" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "26" -> "32" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "7" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "33" -> "7" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xffffffffffffffff0000000000000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "34" -> "7" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "34" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "35" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "36" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "36" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "37" -> "36" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "38" -> "36" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "22" -> "38" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "35" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "39" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0xffffffffffffffff0000000000000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "40" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "40" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "43" -> "42" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "43" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "44" -> "42" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "28" -> "44" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "41" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "45" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="const 0xffffffffffffffff0000000000000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "46" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="Or:u128", shape=box, fillcolor="#2d2d2d"];
  "47" -> "46" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "48" -> "46" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "48" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "49" -> "48" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="const 0xffffffffffffffff:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "50" -> "48" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "50" [label="ZeroExtend\nu64 → u128", shape=box, fillcolor="#2d2d2d"];
  "31" -> "50" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "47" [label="And:u128", shape=box, fillcolor="#2d2d2d"];
  "51" -> "47" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0xffffffffffffffff0000000000000000:u128", shape=ellipse, fillcolor="#2d2d2d"];
  "21" -> "47" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "4" [label="arg[2] ← RDX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "3" [label="init\nRAX", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
